alignment fixes

--- a/css/styles.less
+++ b/css/styles.less
@@ -63,10 +63,18 @@ body{
 	background-color: @bodyBackground;
 }
 
+.gridTight{
+	display: grid; 
+	grid-template-columns: 1fr 2fr; 
+	grid-column-gap: 0px; 
+	padding-left: 0px; 
+	padding-right: 0px
+}
+
 .grid{
 	display: grid; 
 	grid-template-columns: 1fr 2fr; 
-	grid-column-gap:20px; 
+	grid-column-gap: 20px; 
 	padding-left: 20px; 
 	padding-right: 20px
 }
